# 7552-app-server-1c2016

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Server-Log.txt  build-docker.sh  compile-server.sh  config.json  cpplint.py  make-and-run-functional-tests.sh  make-and-run-server.sh  pre-commit.sh  run-functional-tests.sh  run-server-docker.sh
AppServer/: .gitignore
AppServer/src/: CMakeLists.txt  WebServer.cpp  WebServer.h  index.html  main.cpp
AppServer/src/functional_tests/: test_notfound.py
AppServer/src/functional_tests/access/: test_login.py  test_register.py
AppServer/src/functional_tests/chats/: test_getconversation.py  test_sendconversation.py
AppServer/src/functional_tests/likes/: test_dislikes.py  test_likes.py
AppServer/src/functional_tests/matches/: test_matches.py  test_possible_matches.py
AppServer/src/functional_tests/update_user/: test_update.py
AppServer/src/log/: log.cpp  log.h
AppServer/src/static/: index_html_req.html  index_login.html  index_register.html  index_updateprofile.html
AppServer/src/web_server/: Configuration.cpp  Configuration.h  Interest.cpp  Interest.h  Request.cpp  Request.h  RequestManager.cpp  RequestManager.h  Response.cpp  Response.h  Thread.cpp  Thread.h  User.cpp  User.h  UsersContainer.cpp  UsersContainer.h  WebClient.cpp  WebClient.h  WebServer.cpp  WebServer.h
AppServer/src/web_server/database/: Database.cpp  Database.h
AppServer/src/web_server/handlers/: RequestHandler.cpp  RequestHandler.h  RequestHandlerCheckToken.cpp  RequestHandlerCheckToken.h  RequestHandlerConversation.cpp  RequestHandlerConversation.h  RequestHandlerDislike.cpp  RequestHandlerDislike.h  RequestHandlerEditProfile.cpp  RequestHandlerEditProfile.h  RequestHandlerExample.cpp  RequestHandlerExample.h  RequestHandlerGetConversation.cpp  RequestHandlerGetConversation.h  RequestHandlerLike.cpp  RequestHandlerLike.h  RequestHandlerLogin.cpp  RequestHandlerLogin.h  RequestHandlerMatches.cpp  RequestHandlerMatches.h  RequestHandlerNotFound.cpp  RequestHandlerNotFound.h  RequestHandlerPossibleMatches.cpp  RequestHandlerPossibleMatches.h  RequestHandlerRegister.cpp  RequestHandlerRegister.h  RequestHandlerSendConversation.cpp  RequestHandlerSendConversation.h
AppServer/src/web_server/helpers/: distance.h
AppServer/src/web_server/matcher/: Chat.cpp  Chat.h  ChatMessage.cpp  ChatMessage.h  Match.cpp  Match.h  Sugestion.cpp  Sugestion.h  SugestionsGenerator.cpp  SugestionsGenerator.h  Suggestion.cpp  Suggestion.h  SuggestionsGenerator.cpp  SuggestionsGenerator.h
AppServer/test/: CMakeLists.txt  Main_TestAll.cpp
AppServer/test/src/: DistanceHelperTests.cpp
docker_server_test/: Dockerfile  Dockerfile~  build.sh  build.sh~  run.sh  run.sh~
